plugins {
    id "com.github.johnrengelman.shadow" version "4.0.3"
    id 'java'
    id 'application'

}
application {
    mainClassName = 'agent.Initializer'
}
tasks.withType(JavaExec) {
    jvmArgs = ['--illegal-access=warn']
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    gradlePluginPortal()
    mavenCentral()
//    maven { url "https://jitpack.io" }
    flatDir {dirs 'lib'}
}

dependencies {
    implementation('com.tilab.jade:jade:4.5.0')
    implementation group: 'net.sf.py4j', name: 'py4j', version: '0.10.9.7'
    implementation('org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5')
    implementation name: "bdi4jade"
    implementation group: 'io.github.daniel-tucano', name: 'matplotlib4j', version: '0.5.1'
    implementation group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
    implementation group: 'com.opencsv', name: 'opencsv', version: '5.7.1'
    implementation group: 'org.locationtech.jts', name: 'jts-core', version: '1.19.0'
    implementation group: 'org.locationtech.jts', name: 'jts', version: '1.19.0', ext: 'pom'
    implementation group: 'org.json', name: 'json', version: '20220924'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
    implementation 'org.jetbrains:annotations:20.1.0'
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'org.slf4j:slf4j-simple:1.7.30'

}
configurations.all {
    exclude module: 'slf4j-log4j12'
}
jar {
    manifest {
        from file("${projectDir}/src/main/resources/META-INF/MANIFEST.MF")
    }
}
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"